# Makefile_dmo

./: CMakeLists.txt  README.md  a.out  add.c  div.c
Cmake_projext/: CMakeLists.txt  README.md  main.c
Cmake_projext/basic/basic_demo01/: CMakeLists.txt  main.c
Cmake_projext/basic/head_basic/: CMakeLists.txt
Cmake_projext/basic/install_basic01/: CMakeLists.txt
Cmake_projext/basic/library_basic/: CMakeLists.txt
Cmake_projext/basic/library_basic/src/: main.c
Cmake_projext/basic/shared_library_basic/: CMakeLists.txt
Cmake_projext/basic/shared_library_basic/src/: hello.c
Cmake_projext/builds/: CMakeCache.txt  Makefile  cmake_install.cmake  demo
Makefile_project/: Makefile  main.c  sub.c
